--- a/app/assets/stylesheets/style2.css.scss
+++ b/app/assets/stylesheets/style2.css.scss
@@ -129,6 +129,9 @@ body {
 .datetimepicker {
   width: 200px;
 }
+.datepicker {
+	width: 200px;
+}
 .bootstrap-datetimepicker-widget>ul {
   padding-left: 0px;
 }
