--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -4,7 +4,7 @@
 	  <% if msg.is_a?(String) %>
 	    <div class="alert alert-<%= [:notice, :success].include?(name) ? "success" : "danger" %>">
 	      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-	      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+	      <%= content_tag :div, msg.html_safe, :id => "flash_#{name}" %>
 	    </div>
 	  <% end %>
 	<% end %>
