--- a/app/views/layouts/landingpage2.html.erb
+++ b/app/views/layouts/landingpage2.html.erb
@@ -50,7 +50,7 @@
 
       <div class="signup collapse" ng-class="{'in': newUser.currentStep == 2}" id="signupContainer" ng-controller="UsersController">
         <input type="hidden" ng-init="newUser.currentStep=<%= current_user.nil? ? 1: 2 %>;" value="<%= current_user.nil? ? 1 : 2 %>" />
-        <div id="reg-step-1" ng-show="newUser.currentStep == 1">
+        <div id="reg-step-1">
           <p><%= t('lp.signup.sign_up') %></p>
           <%= simple_form_for(:user, html: { id: "signupForm", role: "form", 'ng-submit' => 'signUp()'}, url: '' ) do |f| %>
             <div class="form-inputs">
@@ -80,26 +80,6 @@
             </div>
           <% end %>
         </div>
-        <%
-        #<div id="reg-step-2" ng-show="newUser.currentStep == 2">
-        #  <p>Payment info</p>
-        #  The first month is free and you will get full access. This is the reason for which we need to control the users that can get into this community, but asking for payment info.
-        #
-        #  <center>
-        #    <button class="btn btn-success" ng-click="pay()">Pay</button>
-        #    <= link_to 'Cancel', destroy_user_session_path, method: :delete, class: "btn btn-warning" >
-        #  </center>
-        #</div>
-        %>
-        <% unless current_user.nil? %>
-          <div id="reg-step-2" ng-show="newUser.currentStep == 2">
-            <p><%= t('lp.emailconf.required') %></p>
-            <%= raw t('lp.emailconf.description', email: current_user.email) %>
-            <center>
-              <button class="btn btn-success" ng-click="resendEmail('<%= current_user.email %>')"><%= t('lp.emailconf.resend_email') %></button>
-            </center>
-          </div>
-        <% end %>
 
         <button id="signupClose" data-toggle="collapse" data-target="#signupContainer">
           &#10006;
