--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -9,7 +9,7 @@
 			<div class="form-inputs">
         <%= f.input :title, :required => true, label: 'Title' %>
         <%= f.association :news_category, required: true, collection: NewsCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
-				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
+				<%= f.input :published_at, :as => :date_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control', value: Time.now.to_formatted_s(:date) } %>
 				<%= f.input :summary, :required => true, label: 'Summary' %>
 				<%= f.input :image, as: :file, :required => true, label: 'Image' %>
 				<%= f.input :body, :required => true, label: 'Content', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
