--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -40,6 +40,10 @@
 
 		<hr/>
 
+		<div class="supplier-short-description">
+			<%= @supplier.short_description %>
+		</div>
+
 		<div class="supplier-description">
 			<%= raw(@supplier.description) %>
 		</div>
