--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -14,6 +14,7 @@
 				<%= f.input :phone, :required => false, label: 'Phone' %>
 				<%= f.input :website, :required => false, label: 'Website' %>
 				<%= f.input :image, as: :file, label: 'Image' %>
+				<%= f.input :short_description, :required => true, label: 'Short description' %>
 				<%= f.input :description, :required => true, label: 'Description', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
 				<%= f.input :country, :required => true, label: 'Country' %>
 				<%= f.input :city, :required => true, label: 'City' %>
