--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -18,12 +18,13 @@
 					<% next if i.odd? %>
 					<div class="supplier-item clearfix">
 						<% unless supplier.image_file_name.nil? %>
-						<div class="supplier-logo">
+						<div class="supplier-logo col-sm-2">
 							<%= link_to image_tag(supplier.image.url(:thumb)), supplier %>
 						</div>
 						<% end %>
-						<div class="supplier-details">
+						<div class="supplier-details col-sm-9">
 							<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
+							<p class="supplier-item-short-description"><%= supplier.short_description %></p>
 							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> <%= t('in') %> <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
 							<span class="supplier-item-time"><%= t('posted_on') %> <i><%= supplier.created_at.to_formatted_s(:date) %></i> <%= t('by') %> <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
 						</div>
@@ -35,12 +36,13 @@
 					<% next if i.even? %>
 					<div class="supplier-item clearfix">
 						<% unless supplier.image_file_name.nil? %>
-						<div class="supplier-logo">
+						<div class="supplier-logo col-sm-2">
 							<%= link_to image_tag(supplier.image.url(:thumb)), supplier %>
 						</div>
 						<% end %>
-						<div class="supplier-details">
+						<div class="supplier-details col-sm-9">
 							<a href="<%= supplier_path(@country,supplier) %>"><h4><%= supplier.name %></h4></a>
+							<p class="supplier-item-short-description"><%= supplier.short_description %></p>
 							<p class="supplier-item-location"><span class="supplier-item-location"><%= supplier.name %></span> <%= t('in') %> <span class="supplier-item-location"><%= "#{supplier.city}, #{supplier.country}" %></span></p>
 							<span class="supplier-item-time"><%= t('posted_on') %> <i><%= supplier.created_at.to_formatted_s(:date) %></i> <%= t('by') %> <%= link_to supplier.user.full_name, user_path(supplier.user) %></span>
 						</div>
