--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -48,7 +48,7 @@
             <% @latest.each do |message| %>
               <%
                   cclass = ''
-                  if message.published_at > Time.now-1.day
+                  if message.published_at > Time.now-1.hour
                     cclass = 'new-story'
                   end
               %>
@@ -60,12 +60,19 @@
       </div>
     </div>
 
-    <h3 class="hl"><%= t('hmessages.categories') %></h3>
-    <hr/>
-    <p class="tags">
-      <% @categories.each do |cat| %>
-        <a href="<%= dashboard_path(cat.id) %>"><%= cat.ident %></a>
-      <% end %>
-    <p>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= t('hmessages.categories') %></h3>
+      </div>
+      <div class="panel-body">
+        <div class="recent-blogs">        
+          <ul>
+            <% @categories.each do |cat| %>
+            <li><a href=" <%= dashboard_path(cat.id) %>"><%= cat.ident %></a></li>
+          <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
